--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -9,26 +9,13 @@
 
 
 
-
-<section class="py-5 text-center container-fluid hero-image">
-  <div class="row py-lg-5 text-center text-white">
-    <div class="col-lg-6 col-md-8 mx-auto">
-      <h1 class="display-4">Album example</h1>
-      <p class="display-6">Something short and leading about the collection below—its contents, the creator, etc. Make
-        it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
-      <p>
-
-        <a href="{% url 'products' %}" class="btn btn-primary my-2">Shop Now</a>
-
-      </p>
-    </div>
+<div class="p-5 mb-4  container-fluid" id="jumbotron">
+  <div class="container py-5">
+    <h1 class="display-5 fw-bold text-white">The Museum of the Future!</h1>
+    <p class="col-md-8 fs-4 text-white">Here you will find the finest in computer-generated artwork. </p>
+    <button class="btn btn-primary btn-lg" type="button">Shop Now!</button>
   </div>
-</section>
-
-<section>
-View our newest products
-
-</section>
+</div>
 
 <div class="container col-xxl-8 px-4 py-5">
   <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
@@ -47,83 +34,27 @@ View our newest products
 </div>
 
 <section>
-
-  <div class="album py-5">
-    <div class="container">
-
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-
-
-        <div class="col border-0">
-          <div class="card border-0">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg"
-              role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
-              <title>Placeholder</title>
-              <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
-                dy=".3em">Thumbnail</text>
-            </svg>
-
-            <div class="card-body border-0">
-              <p class="card-text">{{post.title}}</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View Post</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
-                </div>
-                <small class="text-muted">{{post.category}}</small>
-              </div>
-            </div>
-          </div>
+View our newest products
+<div class="container">
+<div class="row row-cols-1 ow-cols-1 row-cols-sm-2 row-cols-md-3 g-4 ">
+  {% for product in products %}
+    <div class="col">
+      <div class="card border-0">
+        <a href="{% url 'product_detail' product.id %}" class="stretched-link"><img src="{{ product.image.url }}" class="card-img-top rounded-0" alt="..."></a>
+        <div class="card-body px-0">
+          <h6 class="card-text mt-2">{{ product.name }}</h6>
+          <p class="card-text mb-1 text-warning"> <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star"></i><i class="bi bi-star"></i></p>
+          <h4 >€{{ product.price }}</h4>
         </div>
-
       </div>
     </div>
+  {% endfor %}
+  
+  
   </div>
+</div>
 
-  <div class="card mb-0" style="width: 18rem;">
-    <img src="..." class="card-img-top" alt="...">
-    <div class="card-body">
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-        content.</p>
-    </div>
-  </div>
-
-
-  <div class="container px-4 py-5" id="custom-cards">
-    <h2 class="pb-2 border-bottom">Latest Blog Posts!</h2>
-
-    <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
-
-      <div class="card" style="">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
-        </div>
-      </div>
-
-      <div class="card" style="">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
-        </div>
-      </div>
-
-      <div class="card" style="">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
-        </div>
-      </div>
-
-    </div>
-  </div>
 </section>
-
-
 
 
 <div class="bg-dark text-secondary px-4 py-5 text-center">
@@ -140,38 +71,6 @@ View our newest products
     </div>
   </div>
 </div>
-
-<section>
-  <div class="container px-5">
-      <div class="row gx-5 align-items-center">
-          <div class="col-lg-6">
-              <div class="p-5"><img class="img-fluid rounded-circle" src="assets/img/02.jpg" alt="..." /></div>
-          </div>
-          <div class="col-lg-6">
-              <div class="p-5">
-                  <h2 class="display-4">We salute you!</h2>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
-              </div>
-          </div>
-      </div>
-  </div>
-</section>
-<!-- Content section 3-->
-<section>
-  <div class="container px-5">
-      <div class="row gx-5 align-items-center">
-          <div class="col-lg-6 order-lg-2">
-              <div class="p-5"><img class="img-fluid rounded-circle" src="assets/img/03.jpg" alt="..." /></div>
-          </div>
-          <div class="col-lg-6 order-lg-1">
-              <div class="p-5">
-                  <h2 class="display-4">Let there be rock!</h2>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
-              </div>
-          </div>
-      </div>
-  </div>
-</section>
 
 
 <div class="container px-4 py-5" id="custom-cards">
@@ -198,13 +97,12 @@ View our newest products
   </div>
 </div>
 
-<div class="p-5 mb-4 bg-light rounded-3 container-fluid">
-  <div class="container py-5">
-    <h1 class="display-5 fw-bold">Custom jumbotron</h1>
-    <p class="col-md-8 fs-4">Using a series of utilities, you can create this jumbotron, just like the one in previous versions of Bootstrap. Check out the examples below for how you can remix and restyle it to your liking.</p>
-    <button class="btn btn-primary btn-lg" type="button">Example button</button>
-  </div>
-</div>
+  
+
+  
+
+
+
 
 
 
