--- a/static/css/base.css
+++ b/static/css/base.css
@@ -4,12 +4,12 @@ body {
     
 }
 
-.hero-image {
+#jumbotron {
     /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://res.cloudinary.com/dpsodnurd/image/upload/c_scale,w_1682/v1652532186/alfons-morales-YLSwjSy7stw-unsplash_l2atpj.jpg");
+    background-image: url("https://res.cloudinary.com/dpsodnurd/image/upload/v1660411479/nightmuseum_c5ehvs.png");
    
     /* Set a specific height */
-    height: 50%;
+    height: 70%;
   
     /* Position and center the image to scale nicely on all screens */
     background-position: center;
@@ -17,4 +17,10 @@ body {
     background-size: cover;
     position: relative;
   }
-  
+/*   
+  body{
+    background-image: url("https://res.cloudinary.com/dpsodnurd/image/upload/c_scale,w_1682/v1652532186/alfons-morales-YLSwjSy7stw-unsplash_l2atpj.jpg")!important;
+    background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  } */
