--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -12,30 +12,35 @@
 <div class="p-5 mb-4  container-fluid" id="jumbotron">
   <div class="container py-5">
     <h1 class="display-5 fw-bold text-white">The Museum of the Future!</h1>
-    <p class="col-md-8 fs-4 text-white">Here you will find the finest in computer-generated artwork. </p>
-    <button class="btn btn-primary btn-lg" type="button">Shop Now!</button>
+    <p class="col-md-8 fs-4 text-white">You can be on the cutting edge of art appreciation by checking out the latest designs made entirely by artifial intelligence. </p>
+    
+    <a class="btn btn-light btn-lg" href="{% url 'products' %}" role="button">Shop Now!</a>
   </div>
 </div>
 
-<div class="container col-xxl-8 px-4 py-5">
+
+
+
+
+<div class="container col-xxl-8 px-4 py-5 t">
   <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
     <div class="col-10 col-sm-8 col-lg-6">
-      <img src="bootstrap-themes.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+      <img src="https://res.cloudinary.com/dpsodnurd/image/upload/v1660413261/colorbot_iafpb7.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
     </div>
     <div class="col-lg-6">
-      <h1 class="display-5 fw-bold lh-1 mb-3">Responsive left-aligned hero with image</h1>
-      <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+      <h1 class="display-5 fw-bold lh-1 mb-3">Only the finest robotic artists at your service.</h1>
+      <p class="lead">We are a print shop selling posters of artwork designed entirely by the latest in intelligent image creation software. Every bit and byte is lovingly crafted with precision and care. Be one of the first to explore a new forefront of digitized creativity!</p>
       <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-        <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Primary</button>
-        <button type="button" class="btn btn-outline-secondary btn-lg px-4">Default</button>
+        
       </div>
     </div>
   </div>
 </div>
 
 <section>
-View our newest products
-<div class="container">
+
+<div class="container ">
+  <div class="text-center display-5 fw-bold mb-4">View our newest products added to the store:</div>
 <div class="row row-cols-1 ow-cols-1 row-cols-sm-2 row-cols-md-3 g-4 ">
   {% for product in products %}
     <div class="col">
@@ -74,7 +79,8 @@ View our newest products
 
 
 <div class="container px-4 py-5" id="custom-cards">
-  <h2 class="pb-2 border-bottom">Check out our latest blog posts!</h2>
+  
+  <div class="text-center display-5 fw-bold mb-4">Check out our latest blog posts</div>
 
   <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
     {% for post in blogposts %}
@@ -95,6 +101,9 @@ View our newest products
 
    
   </div>
+
+
+
 </div>
 
   
