--- a/templates/base.html
+++ b/templates/base.html
@@ -12,27 +12,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="keywords" content="{% block specific-product-keywords %}{% endblock %}, ttt">
-    
+
     {% endblock %}
     <!-- favicon -->
-  
-  <link rel="apple-touch-icon" sizes="180x180" href="https://res.cloudinary.com/dpsodnurd/image/upload/v1660428211/apple-touch-icon_wlgjmz.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="https://res.cloudinary.com/dpsodnurd/image/upload/v1660428211/favicon-32x32_rvonjr.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="https://res.cloudinary.com/dpsodnurd/image/upload/v1660428211/favicon-16x16_oa0fi3.png">
+
+    <link rel="apple-touch-icon" sizes="180x180"
+        href="https://res.cloudinary.com/dpsodnurd/image/upload/v1660428211/apple-touch-icon_wlgjmz.png">
+    <link rel="icon" type="image/png" sizes="32x32"
+        href="https://res.cloudinary.com/dpsodnurd/image/upload/v1660428211/favicon-32x32_rvonjr.png">
+    <link rel="icon" type="image/png" sizes="16x16"
+        href="https://res.cloudinary.com/dpsodnurd/image/upload/v1660428211/favicon-16x16_oa0fi3.png">
 
     {% block corecss %}
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
     {% endblock %}
 
     {% block extra_css %}
     {% endblock %}
 
-    <script src="https://unpkg.com/htmx.org@1.8.0" integrity="sha384-cZuAZ+ZbwkNRnrKi05G/fjBX+azI9DNOkNYysZ0I/X5ZFgsmMiBXgDZof30F5ofc" crossorigin="anonymous"></script>
-    
+    <script src="https://unpkg.com/htmx.org@1.8.0"
+        integrity="sha384-cZuAZ+ZbwkNRnrKi05G/fjBX+azI9DNOkNYysZ0I/X5ZFgsmMiBXgDZof30F5ofc" crossorigin="anonymous">
+    </script>
+
     <script src="https://js.stripe.com/v3/"></script>
     <title>Electric Dreams</title>
 
@@ -40,29 +45,27 @@
 
 <body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
     {% include "includes/navbar.html" %}
-   
-   
-    
 
 
 
-    {% if messages %}
-    <div class="message-container">
-        {% for message in messages %}
-        {% with message.level as level %}
-        {% if level == 40 %}
-        {% include 'includes/toasts/toast_error.html' %}
-        {% elif level == 30 %}
-        {% include 'includes/toasts/toast_warning.html' %}
-        {% elif level == 25 %}
-        {% include 'includes/toasts/toast_success.html' %}
-        {% else %}
-        {% include 'includes/toasts/toast_info.html' %}
-        {% endif %}
-        {% endwith %}
-        {% endfor %}
+
+
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 offset-md-2">
+                {% for message in messages %}
+                <div class="alert {{ message.tags }} alert-dismissible fade show" id="msg" role="alert">
+                    {{ message | safe }}
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
     </div>
-    {% endif %}
+
+
+
 
     {% block content %}
 
@@ -75,16 +78,22 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">
     </script>
-   
-   
+
+
     {% block extra_js %}
     {% endblock %}
 
     {% block postloadjs %}
-    
+
     {% endblock %}
 
-    
+    <script>
+        window.setTimeout(function () {
+            $(".alert").fadeTo(500, 0).slideUp(500, function () {
+                $(this).remove();
+            });
+        }, 1500);
+    </script>
 
 
 </body>
