--- a/products/templates/products/category_view.html
+++ b/products/templates/products/category_view.html
@@ -6,7 +6,7 @@
 <div class = "container">
 <div class = "my-3">
     <label >Ranking:</label>
-    <select name="ranking" hx-get="{% url 'products_ranking' %}" hx-target="#prod-list" >
+    <select name="ranking" hx-get="{% url 'products_ranking' %}" hx-target="#prod-list" hx-vals='{"category": "{{ product_category }}"}' >
         
         <option value="price_asc">Price (low to high)</option>
         <option value="price_desc" >Price (high to low)</option>
